--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Meet & Coffee</title>
+	<title>Meet y Coffee</title>
 	<meta charset="utf-8">
 	<link rel="shortcut icon" type="image/png" href="favicon.png">
 	<meta name="author" content="Francisca Medina Concha">
@@ -39,7 +39,7 @@
 		<div class="centrado">
 			<img src="assets/img/speaker.jpg" alt="speaker" class="charla-speaker">
 			<div class="charla-texto">
-				<h2>Próxima charla</h2>
+				<h2>Próximo evento</h2>
 		  	<h3>Big Data para Noobs</h3>
 		  	<h4>Rafaela Valdéz</h4>
 		  	<h5>Data scientis, phD Theoriccal Physics, Carneige Mellon University</h5>
