--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
 		<a href="https://twitter.com"><i class="fab fa-twitter-square fa-5x"></i></a>
 		<a href="https://www.linkedin.com"><i class="fab fa-linkedin fa-5x"></i></a>
 	  <p>Meet & coffe 2018. Todos los derechos reservados.</p>
+	  <p>esta es una linea nueva. by Richard-39</p>
 	</footer>
 </body>
 </html>
