--- a/index.html
+++ b/index.html
@@ -25,21 +25,21 @@
 	</nav>
 
   <header id="inicio" class="hero-section">
-    <h1>Descubre lo último en tecnología bebiendo café</h1>
+    <h1>Ven a charlas y disfruta del café</h1>
     <h2 class="subtitulo">Charlas, eventos y simposios sobre tecnología</h2>
   </header>
 
   <section id="ubicacion">
     <img src="assets/img/we-work.jpg" alt="We work location">
   	<h2>¿Donde nos juntamos?</h2>
-  	<p>Todos los martes y viernes, de 19:00  a 22:00 en We Work, Calle Baker 133, Providencia, Santiago.</p>
+  	<p>Todos los jueves y sábados, de 20:00  a 23:00 en We Work, Calle Baker 133, Providencia, Santiago.</p>
   </section>
 
 	<section id="proxima-charla" class="sweet-brown">
 		<div class="centrado">
 			<img src="assets/img/speaker.jpg" alt="speaker" class="charla-speaker">
 			<div class="charla-texto">
-				<h2>Próximo evento</h2>
+				<h2>Próximo evento geek</h2>
 		  	<h3>Big Data para Noobs</h3>
 		  	<h4>Rafaela Valdéz</h4>
 		  	<h5>Data scientis, phD Theoriccal Physics, Carneige Mellon University</h5>
