cambios articulo 1 eventos

--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
 	</section>
 
   <section id="eventos">
-  	<h2>Eventos anteriores</h2>
+  	<h2>Futuros Eventos 2</h2>
 		<article class="evento">
-			<img src="assets/img/simposio-vegan.jpg" alt="Events simposio vegan">
-			<h3>Simposio Vegan DB</h3>
+			<img src="assets/img/card-1.jpg" alt="Events simposio vegan">
+			<h3>sin simposio</h3>
 		</article>
 
 		<article class="evento">
