Se cambian algunos textos.

--- a/index.html
+++ b/index.html
@@ -42,8 +42,10 @@
 				<h2>Próximo evento</h2>
 		  	<h3>Big Data para Noobs</h3>
 		  	<h4>Rafaela Valdéz</h4>
+			<h4>Romina Taras</h4>
 		  	<h5>Data scientis, phD Theoriccal Physics, Carneige Mellon University</h5>
 		  	<p>En esta charla revisaremos las técnicas y tecnologías que hacen que sea económico hacer frente a los datos de una escala extrema.</p>
+			<p>También revisaremos otros eventos...</p>
 			</div>
 		</div>
 	</section>
@@ -70,7 +72,7 @@
 		<a href="https://github.com"><i class="fab fa-github-square fa-5x"></i></a>
 		<a href="https://twitter.com"><i class="fab fa-twitter-square fa-5x"></i></a>
 		<a href="https://www.linkedin.com"><i class="fab fa-linkedin fa-5x"></i></a>
-	  <p>Meet & coffe 2018. Todos los derechos reservados.</p>
+	  <p>Meet & coffe 2020. Todos los derechos reservados.</p>
 	</footer>
 </body>
 </html>
