--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 		  	<h3>Big Data para Noobs</h3>
 		  	<h4>Rafaela Valdéz</h4>
 		  	<h5>Data scientis, phD Theoriccal Physics, Carneige Mellon University</h5>
-		  	<p>En esta charla revisaremos las técnicas y tecnologías que hacen que sea económico hacer frente a los datos de una escala extrema.</p>
+		  	<p>En esta charla revisaremos las cosas y tecnologías que hacen que sea económico hacer frente a los datos de una escala extrema.</p>
 			</div>
 		</div>
 	</section>
@@ -67,9 +67,7 @@
   </section>
 
 	<footer id="contacto" class="oscuro">
-		<a href="https://github.com"><i class="fab fa-github-square fa-5x"></i></a>
-		<a href="https://twitter.com"><i class="fab fa-twitter-square fa-5x"></i></a>
-		<a href="https://www.linkedin.com"><i class="fab fa-linkedin fa-5x"></i></a>
+
 	  <p>Meet & coffe 2018. Todos los derechos reservados.</p>
 	</footer>
 </body>
